menu bar overflow fix

--- a/styles/MenuBar.module.css
+++ b/styles/MenuBar.module.css
@@ -8,6 +8,8 @@
     justify-content: space-between;
     align-items: center;
     background: #fff;
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
 
 .pages {
